<resources>
    <string name="app_name">UberApp Tim24</string>
    <string name="splash_text">UberApp\nTim24</string>
    <string name="email_hint">e-mail</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login!</string>
    <string name="register_button_text">Register</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_acc_history">Account</string>
    <string name="nav_menu_drive_history">Drive History</string>
    <string name="nav_menu_inbox">Inbox</string>
    <string name="logout">Logout</string>
    <string name="username_hint">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="passenger_register_name_hint">Name</string>
    <string name="passenger_register_surname_hint">Surname</string>
    <string name="passenger_register_number_hint">Phone number</string>
    <string name="passenger_register_email_hint">Email address</string>
    <string name="passenger_register_address_hint">Address</string>
    <string name="passenger_register_password_hint">Password</string>
    <string name="placeholder">placeholder</string>
    <string name="driver_account_email">Email:</string>
    <string name="driver_account_status">Status:</string>
    <string name="driver_account_address">Address:</string>
    <string name="driver_account_phone_number">Phone number:</string>
    <string name="driver_account_blocked">blocked</string>
    <string name="driver_account_normal">normal</string>
    <string name="passenger_pinned_chat_support">Support chat</string>
    <string name="passenger_account_email">Email:</string>
    <string name="passenger_account_status">Status:</string>
    <string name="passenger_account_address">Address:</string>
    <string name="passenger_account_phone_number">Phone number:</string>
    <string name="passenger_account_blocked">blocked</string>
    <string name="passenger_account_normal">normal</string>
    <string name="driver">Driver: </string>
    <string name="passenger">Passenger: </string>
    <string name="start_location">Start Location: </string>
    <string name="end_location">End Location: </string>
    <string name="start_time">Start Time: </string>
    <string name="end_time">End Time: </string>
    <string name="rating">Rating: </string>
    <string name="comment">Comment: </string>
    <string name="ride_details">Ride Details</string>
    <string name="ride_length">"Ride Length: "</string>
    <string name="accept">Accept</string>
    <string name="odrediste">Odrediste</string>
    <string name="polaziste">Polaziste</string>
    <string name="price_string">400 RSD</string>
    <string name="estimated_time">15 min</string>
    <string name="babies_pets">Babies, Pets</string>
    <string name="reject">Reject</string>
</resources>