<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_menu_home" />
        <item
            android:id="@+id/nav_acc_history"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_menu_acc_history" />
        <item
            android:id="@+id/nav_drive_history"
            android:icon="@drawable/ic_drive_history"
            android:title="@string/nav_menu_drive_history" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/nav_menu_inbox" />
    </group>
    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            />
    </group>
</menu>