<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PassengerRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/passenger_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/passenger_register_name_hint"/>

        <EditText
            android:id="@+id/passenger_register_surnname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/passenger_register_surname_hint"/>

        <EditText
            android:id="@+id/passenger_register_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/passenger_register_number_hint"/>

        <EditText
            android:id="@+id/passenger_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/passenger_register_email_hint"/>

        <EditText
            android:id="@+id/passenger_register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/passenger_register_address_hint"/>

        <EditText
            android:id="@+id/passenger_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/passenger_register_password_hint"/>

        <Button
            android:id="@+id/passenger_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/register_button_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>