<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.driver.DriverAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_horizontal"
        android:layout_margin="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/driver_account_profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/driver_account_name_and_surname_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/driver_account_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_account_email"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/driver_account_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_account_address"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/driver_account_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_account_phone_number"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/driver_account_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_account_status"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/driver_account_email_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/driver_account_address_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/driver_account_phone_number_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/driver_account_status_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>